<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/message_dialog_width"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:background="@drawable/feb_menu_bg"
    >

    <EditText
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/views_height"
        android:ems="10"
        android:hint="@string/current_password_placeholder"
        android:textColorHint="@color/edit_text_hint"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/username_left_padding"
        android:layout_marginLeft="@dimen/username_password_top_bottom_margin"
        android:layout_marginRight="@dimen/username_password_top_bottom_margin"
        android:layout_marginBottom="@dimen/username_password_top_bottom_margin"
        android:background="@android:color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:singleLine="true" ><requestFocus/></EditText>
    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/views_height"
        android:ems="10"
        android:hint="@string/new_password_placeholder"
        android:textColorHint="@color/edit_text_hint"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/username_left_padding"
        android:layout_marginLeft="@dimen/username_password_top_bottom_margin"
        android:layout_marginRight="@dimen/username_password_top_bottom_margin"
        android:layout_marginBottom="@dimen/username_password_top_bottom_margin"
        android:background="@android:color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:singleLine="true" />
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/views_height"
        android:ems="10"
        android:hint="@string/confirm_password_placeholder"
        android:textColorHint="@color/edit_text_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/username_left_padding"
        android:layout_marginLeft="@dimen/username_password_top_bottom_margin"
        android:layout_marginRight="@dimen/username_password_top_bottom_margin"
        android:layout_marginBottom="@dimen/username_password_top_bottom_margin"
        android:background="@android:color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:singleLine="true" />
     <LinearLayout
        android:layout_width="match_parent"
         android:layout_height="@dimen/views_height"
        android:layout_weight=".5"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textColor="@color/main_font"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:textSize="@dimen/task_rejection_text_size"
            android:textAllCaps="false"
            android:id="@+id/cancel"
            android:background="@drawable/sign_in_round"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/main_font"
            android:textAllCaps="false"
            android:textSize="@dimen/task_rejection_text_size"
            android:id="@+id/ok"
            android:background="@drawable/sign_in_round"/>
    </LinearLayout>
</LinearLayout>