<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.LoginScreen">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_gravity="center">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_layout"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/wds"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_tag_line"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="@dimen/toolbar_header_size"
                android:layout_marginTop="@dimen/tag_line_top_margin"
                android:textColor="@color/pink"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/username_password_block_top_margin"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/views_height"
                    android:ems="10"
                    android:hint="@string/username_placeholder"
                    android:textColorHint="@color/edit_text_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailSubject"
                    android:paddingLeft="@dimen/username_left_padding"
                    android:layout_marginLeft="@dimen/username_password_top_bottom_margin"
                    android:layout_marginRight="@dimen/username_password_top_bottom_margin"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:background="@android:color/white"
                    android:layout_marginBottom="@dimen/username_password_top_bottom_margin"
                    android:textSize="@dimen/check_in_text_size"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:maxLines="1">
                    <requestFocus/></EditText>
                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/views_height"
                    android:ems="10"
                    android:hint="@string/password_placeholder"
                    android:textColorHint="@color/edit_text_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/username_left_padding"
                    android:layout_marginLeft="@dimen/username_password_top_bottom_margin"
                    android:layout_marginRight="@dimen/username_password_top_bottom_margin"
                    android:layout_marginBottom="@dimen/username_password_top_bottom_margin"
                    android:background="@android:color/white"
                    android:textSize="@dimen/check_in_text_size"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:singleLine="true" />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/views_height"
                android:text="@string/sign_in"
                android:layout_marginTop="@dimen/sign_in_left_right_margin"
                android:layout_marginLeft="@dimen/sign_in_left_right_margin"
                android:layout_marginRight="@dimen/sign_in_left_right_margin"
                android:background="@drawable/sign_in_round"
                android:textAllCaps="false"
                android:textSize="@dimen/check_in_text_size"
                android:textColor="@android:color/white"
                android:id="@+id/login"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_up_block_top_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2.2"
                    android:textAlignment="textEnd"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sign_up_block_textview_text_size"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:text="@string/sign_up_text"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1.2"
                    android:textAlignment="center"
                    android:layout_height="@dimen/sign_up_button_height"
                    android:textAllCaps="false"
                    android:textSize="@dimen/check_in_text_size"
                    android:layout_marginLeft="@dimen/sign_up_button_left_margin"
                    android:background="@drawable/sign_up_round"
                    android:id="@+id/sign_up"
                    android:text="@string/sign_up"/>
                <View
                    android:layout_width="0dp"
                    android:layout_weight=".6"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>
            </LinearLayout>
        </LinearLayout>
        </ScrollView>
        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/pink"/>
        </RelativeLayout>
    </FrameLayout>
</LinearLayout>
