<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/child_feb_menu_layout"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/feb_menu_bg"
    android:orientation="vertical">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_layout"
            android:fitsSystemWindows="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:textSize="@dimen/floating_menu_list_size"
                android:id="@+id/child_fb_view_task"
                android:textColor="@color/pink"
                android:padding="@dimen/feb_list_padding"
                android:text="@string/view_task" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:textSize="@dimen/floating_menu_list_size"
                android:textColor="@color/pink"
                android:id="@+id/child_fb_balance"
                android:padding="@dimen/feb_list_padding"
                android:text="@string/balance" />
            <!-- <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="bottom"
                 android:textSize="@dimen/floating_menu_list_size"
                 android:textColor="@color/pink"
                 android:id="@+id/child_fb_calendar"
                 android:padding="@dimen/feb_list_padding"
                 android:text=" Calendar" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="bottom"
                 android:textSize="@dimen/floating_menu_list_size"
                 android:id="@+id/child_fb_profile"
                 android:textColor="@color/pink"
                 android:padding="@dimen/feb_list_padding"
                 android:text=" Profile" />-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:textSize="@dimen/floating_menu_list_size"
                android:id="@+id/child_fb_logout"
                android:textColor="@color/pink"
                android:padding="@dimen/feb_list_padding"
                android:text="@string/child_logout" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:visibility="visible"
            android:layout_margin="3dp"
            android:layout_gravity="right">
            <com.github.siyamed.shapeimageview.CircularImageView
                android:layout_width="@dimen/floating_menu_avatar_size"
                android:layout_height="@dimen/floating_menu_avatar_size"
                android:src="@drawable/default_avatar"
                app:siRadius="1dp"
                app:siBorderWidth="1.5dp"
                app:siBorderColor="@android:color/white"
                app:siSquare="true"
                android:id="@+id/child_fb_user_image"
                android:layout_gravity="center" />
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>